# 5G-UE-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat
doc/: 3GPP_COMPLIANCE.md  ARCHITECTURE.md  DPDK.md  EXAMPLES.md  EXECUTION_RESULTS.md  HOW_IT_WORKS.md  QUICKSTART.md  TEST_RESULTS.md  THREADING.md  VERIFICATION.md
doc/MODULES/: mac_layer.md  pdcp_layer.md  rlc_layer.md  ue_simulator.md
include/: common_types.hpp  ilayer.hpp  mac_layer.hpp  pdcp_layer.hpp  rlc_layer.hpp  ue_simulator.hpp
src/: mac_layer.cpp  main.cpp  pdcp_layer.cpp  rlc_layer.cpp  ue_simulator.cpp
tests/: test_integration.cpp  test_mac_layer.cpp  test_pdcp_layer.cpp  test_rlc_layer.cpp
